packages/kit/test/apps/basics/src/routes/errors/page-endpoint/index.svelte
<a id="get-implicit" href="/errors/page-endpoint/get-implicit">GET (implicit)</a>
<a id="get-explicit" href="/errors/page-endpoint/get-explicit">GET (explicit)</a>

<form action="/errors/page-endpoint/post-implicit" method="post">
	<button type="submit" id="post-implicit">POST (implicit)</button>
</form>

<form action="/errors/page-endpoint/post-explicit" method="post">
	<button type="submit" id="post-explicit">POST (explicit)</button>
</form>
